<resources>
    <string name="app_name">Home Manager</string>
    <string name="title_activity_quick_access">QuickAccess</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="hello">Hello From Marie 2</string>
    <string name="usernameLabel">Username</string>
    <string name="passwordLabel">Password</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="only_my_tasks">Only show my tasks</string>
    <string name="invitation_to_register"><u>Don\'t have an account? Click here to register</u></string>
    <string name="grocery">Groceries</string>
    <string name="material_text">Materials</string>
    <string name="please_enter_item_type_to_buy">Please enter item type to buy !</string>
    <string name="enter_the_quantity_here">Enter the quantity Here</string>
    <string name="enter_the_assignee_here">Enter the assignee Here</string>
    <string name="enter_the_item_name">Enter the item name</string>
    <string name="enter_item_type">Enter item type :</string>
    <string name="confirm">Confirm</string>
    <string name="add_a_task">Add a task</string>
    <string name="enter_the_details">Enter the details:</string>
    <string name="enter_child_name">Enter child name</string>
    <string name="enter_reward_name">Enter reward name</string>
    <string name="assign_reward">ASSIGN REWARD</string>
</resources>
