<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="besmart.team.homemanager.shopping_class">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="102dp"
            android:orientation="horizontal">
             <TextView
                 android:id="@+id/item_type"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:paddingTop="60dp"
                 android:text="@string/enter_item_type"
                 android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="74dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/grocery_item"
                android:layout_width="72dp"
                android:layout_height="53dp"
                android:layout_weight="1"
                android:text="@string/grocery" />

            <RadioButton
                android:id="@+id/material_item"
                android:layout_width="66dp"
                android:layout_height="53dp"
                android:layout_weight="1"
                android:text="@string/material_text" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="68dp"
            android:orientation="horizontal">
ss
                <EditText
                    android:id="@+id/nameOfItem"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="#839192"
                    android:hint="@string/enter_the_item_name"
                    android:padding="15dp"
                    android:textColorHint="#fff"
                    android:textStyle="bold" />

                <!--set background color black-->
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="67dp"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/QuantityOfItem"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="#839192"
                    android:hint="@string/enter_the_quantity_here"
                    android:padding="15dp"
                    android:textColorHint="#fff"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="67dp"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/AssigneeOfItem"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="#839192"
                    android:hint="@string/enter_the_assignee_here"
                    android:padding="15dp"
                    android:textColorHint="#fff"
                    android:textStyle="bold" />
            </LinearLayout>

            <Button
                android:id="@+id/submit_button"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:layout_marginTop="20dp"
                android:text="@string/confirm" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
