<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="besmart.team.homemanager.award_class">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="20sp"
            android:paddingTop="20sp"
            android:text="@string/enter_the_details"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="30sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="88dp"
            android:orientation="horizontal"
            android:paddingBottom="10sp"
            android:paddingTop="15sp">

            <!--set background color black-->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/enter_child_name"
                android:textAlignment="viewStart"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/itemName"
                android:layout_width="238dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="104dp"
            android:orientation="horizontal"
            android:paddingBottom="10sp"
            android:paddingTop="15sp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/enter_reward_name"
                android:textAlignment="viewStart"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/itemQuantity"
                android:layout_width="250sp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="number" />
        </LinearLayout>

        <Button
            android:id="@+id/addItemButton"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_marginTop="20dp"
            android:text="@string/assign_reward"
            android:textSize="18sp" />

    </LinearLayout>
</android.support.constraint.ConstraintLayout>
